fix: do not wrap code blocks

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -160,10 +160,7 @@ main {
 }
 
 pre {
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -pre-wrap;
-  white-space: -o-pre-wrap;
+  overflow-x: auto;
   word-wrap: break-word;
 }
 
